--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-streamlit==1.38.0
-pandas>=2.2
-numpy>=1.26
-plotly==5.24.1
-scipy==1.13.1
-Pillow>=10.0
-scikit-learn>=1.4
-statsmodels==0.14.2
-xgboost>=2.0
-catboost>=1.2
-reportlab>=4.1
-statsmodels==0.14.2
+streamlit
+pandas
+numpy
+plotly
+scipy
+Pillow
+scikit-learn
+statsmodels
+xgboost
+catboost
+reportlab
