--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ statsmodels
 xgboost
 catboost
 reportlab
+git add requirements.txt
+git commit -m "force rebuild: trigger reportlab install"
+git push
