--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 streamlit==1.39.0
+protobuf==4.25.3
 pandas==2.2.3
-numpy==2.1.2
+numpy==1.26.4
 plotly==5.24.1
 scipy==1.13.1
 Pillow==10.4.0
 scikit-learn==1.5.2
 statsmodels==0.14.3
-xgboost==2.1.1
-catboost==1.2.5
 reportlab==4.2.2
