--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
+pip==24.2
+setuptools<70
+wheel
+
 streamlit==1.39.0
 protobuf==4.25.3
-pandas==2.2.3
+
 numpy==1.26.4
+pandas==2.2.3
+
+scipy==1.11.4
+scikit-learn==1.4.2
+
 plotly==5.24.1
-scipy==1.13.1
 Pillow==10.4.0
-scikit-learn==1.5.2
-statsmodels==0.14.3
 reportlab==4.2.2
