--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
+runtime.txt
+python-3.11.9
+
+requirements.txt
 pip==24.2
 setuptools<70
 wheel
-
 streamlit==1.39.0
-protobuf==4.25.3
-
-numpy==1.26.4
 pandas==2.2.3
-
-scipy==1.11.4
+numpy==1.26.4
 scikit-learn==1.4.2
-
+scipy==1.11.4
 plotly==5.24.1
 Pillow==10.4.0
 reportlab==4.2.2
