--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,9 @@
-pip==24.2
-setuptools<70
-wheel
-
-streamlit==1.39.0
-protobuf==4.25.3
-
-numpy==1.26.4
-pandas==2.2.3
-scipy==1.11.4
-scikit-learn==1.4.2
-
+streamlit==1.35.0
 plotly==5.24.1
-Pillow==10.4.0
-reportlab==4.2.2
+numpy==1.26.4
+pandas==2.2.2
+scipy==1.11.4
+scikit-learn==1.3.2
+statsmodels==0.14.3
+reportlab==3.6.13
+Pillow==10.3.0
